added follow and unfollow button

--- a/instagram_web/templates/home.html
+++ b/instagram_web/templates/home.html
@@ -1,12 +1,10 @@
-{% extends "_layout.html" %}
+{% extends "_layout.html" %} {% block title %} {% endblock %} {% block header %}
+{% endblock %} {% block content %}
+<card
+  ><div class="d-flex justify-content-center">
+    <h2><i class="fas fa-home"></i><span> </span>Welcome to Nextagram</h2>
+  </div>
+  <br />
+</card>
 
-{% block title %}
-  Homepage
-{% endblock %}
-
-{% block header %}
-{% endblock %}
-
-{% block content %}
-  <h1>Homepage</h1>
 {% endblock %}
