--- a/instagram_web/blueprints/users/templates/users/new.html
+++ b/instagram_web/blueprints/users/templates/users/new.html
@@ -1,1 +1,34 @@
-<h1>Users#new</h1>
+{%extends "_layout.html"%} {% block content %}
+<div class="d-flex justify-content-center">
+  <h2><i class="far fa-user"></i> <span> </span> New Users</h2>
+</div>
+
+{% for error in errors if errors|length > 0 %}
+<li>{{error}}</li>
+{% endfor %}
+<form action="{{url_for('users.create')}}" method="POST">
+  <div class="form-group">
+    <label for="username">User Name</label>
+    <input type="name" class="form-control" name="name" />
+  </div>
+  <div class="form-group">
+    <label for="email">Email address</label>
+    <input type="email" class="form-control" name="email" />
+    <small id="emailHelp" class="form-text text-muted"
+      >We'll never share your email with anyone else.</small
+    >
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" name="password" />
+  </div>
+  <div class="form-group form-check">
+    <input type="checkbox" class="form-check-input" />
+    <label class="form-check-label" for="text">Check me out</label>
+  </div>
+  <button type="submit" class="btn btn-outline-info btn-lg">
+    Submit <span> </span><i class="far fa-check-circle"></i>
+  </button>
+</form>
+
+{% endblock %}
