--- a/instagram_web/static/css/custom.css
+++ b/instagram_web/static/css/custom.css
@@ -1,21 +1,26 @@
 body {
-  margin: 0;
-  padding-bottom: 15px;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-left: 20px;
+  padding-bottom: 20px;
   position: relative;
   min-height: 100vh;
+  font-family: "Inconsolata", monospace;
+  background-color: black;
+  color: gold;
 }
 
 footer {
-  font-size: 11px;
-  position: absolute;
-  bottom: 8px;
-  left: 0;
+  font-size: 15px;
+  margin-top: 30px;
+  left: 20px;
   right: 0;
   text-align: center;
-  color: #303030;
+  color: gold;
 }
 
 footer a {
+  left: 20px;
   text-decoration: none;
-  color: #303030;
+  color: gold;
 }
