--- a/instagram_web/templates/_layout.html
+++ b/instagram_web/templates/_layout.html
@@ -1,33 +1,53 @@
+{% from 'macro/navbar.html' import navbar with context %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <link rel="shortcut icon" href="{{ url_for('static', filename='image/favicon.ico') }}">
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='image/favicon.ico') }}"
+    />
 
     {% assets "home_css" %}
-      <link rel="stylesheet" href="{{ ASSET_URL }}">
-    {% endassets %}
-
-    {% assets "home_js" %}
-      <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-    {% endassets %}
-
-    {% block header %}
-    {% endblock %}
-
+    <link rel="stylesheet" href="{{ ASSET_URL }}" />
+    {% endassets %} {% assets "home_js" %}
+    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    {% endassets %} {% block header %} {% endblock %}
+    <link
+      href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/99103364be.js"
+      crossorigin="anonymous"
+    ></script>
     <title>
-      {% block title %}
-      {% endblock %}NEXTAGRAM
+      {% block title %} {% endblock %} Nextagram
     </title>
-
   </head>
   <body>
-    {% block content %}
-    {% endblock %}
-    <footer>
-      Made with &hearts; at <a target="_blank" href="https://www.nextacademy.com/?utm_source=github&utm_medium=student-challenge&utm_campaign=flask-nextagram">NEXT Academy</a>
-    </footer>
+    {{navbar()}}
+    <div class="container-fluid justify-content-center">
+      {% with messages = get_flashed_messages() %} {% if messages %}
+      <ul class="flashes">
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %} {% endwith %} {% block content %} {% endblock %}
+    </div>
   </body>
+  <footer class=" w-100">
+    Made with &hearts; at
+    <a
+      target="_blank"
+      href="https://www.nextacademy.com/?utm_source=github&utm_medium=student-challenge&utm_campaign=flask-nextagram"
+      >NEXT Academy</a
+    >
+  </footer>
 </html>
